src/objects/Almond_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Back_to_SF_URL__c</fullName>
        <inlineHelpText>Must be a relative url path (e.g. /home/home.jsp)</inlineHelpText>
        <label>Back to SF URL</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Logo__c</fullName>
        <description>URL for your company logo</description>
        <inlineHelpText>URL for your company logo</inlineHelpText>
        <label>Company Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Section_Name__c</fullName>
        <description>Name of a custom section displayed in the header</description>
        <inlineHelpText>Name of a custom section displayed in the header</inlineHelpText>
        <label>Custom Section Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Section_URL__c</fullName>
        <description>URL path for your custom page</description>
        <inlineHelpText>URL for your custom page (e.g. https://instance.salesforce.com/apex/myhomepage)</inlineHelpText>
        <label>Custom Section URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Correct_Response_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option if you&apos;d like to disable setting the correct response checkbox on every response</inlineHelpText>
        <label>Disable Correct Response Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Feed_Item_Audit_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option if you&apos;d like to disable setting the created by id for achievement feed items</inlineHelpText>
        <label>Disable Audit Fields for Feed Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Future_Progress_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to force training plan progress calculation in a single transaction</inlineHelpText>
        <label>Disable Future Progress Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Track_Achievements__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to prevent automatic achievement assignment for track achievements</inlineHelpText>
        <label>Disable Track Achievements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_iOS_Tap_Fix__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option if you&apos;re experiencing issues with taps in Salesforce1 + iOS8</inlineHelpText>
        <label>Enable iOS Tap Fix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Header_Background_Color__c</fullName>
        <description>HEX value for the header background color. (e.g. #EEEEEE)</description>
        <inlineHelpText>HEX value for the header background color. (e.g. #EEEEEE)</inlineHelpText>
        <label>Header Background Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Text_Color__c</fullName>
        <description>HEX value for the header text color. (e.g. #EEEEEE)</description>
        <inlineHelpText>HEX value for the header text color. (e.g. #EEEEEE)</inlineHelpText>
        <label>Header Text Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Text_Hover_Color__c</fullName>
        <description>HEX value for the header text hover color. (e.g. #EEEEEE)</description>
        <inlineHelpText>HEX value for the header text hover color. (e.g. #EEEEEE)</inlineHelpText>
        <label>Header Text Hover Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_Back_to_SF_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option if you&apos;d like to hide back to SF button when the SF header is disabled</inlineHelpText>
        <label>Hide Back to SF Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Salesforce_Header__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to show the Salesforce header for the end-user training pages</inlineHelpText>
        <label>Show Salesforce Header</label>
        <type>Checkbox</type>
    </fields>
    <label>Almond Settings</label>
</CustomObject>